La mayoria de los componente ya se adaptan al movil, falta el contactanos para terminar

--- a/Front-MHADFOX/src/pages/components/contacto/contacto.component.html
+++ b/Front-MHADFOX/src/pages/components/contacto/contacto.component.html
@@ -9,7 +9,7 @@
       <mat-grid-tile [colspan]="1" [rowspan]="1">
         <div class="contact-details" >
           <h3>Estamos aquí para ayudarte, contáctanos</h3>
-          <p>Completa el formulario y nos pondremos en contacto contigo lo antes posible.</p>
+          <p>Estamos aquí para ayudarte. Completa el formulario y nos pondremos en contacto contigo lo antes posible.</p>
           <div class="contact-item">
             <mat-icon class="icon">smartphone</mat-icon>
             <div>
