--- a/Front-MHADFOX/src/pages/components/home/home.component.css
+++ b/Front-MHADFOX/src/pages/components/home/home.component.css
@@ -56,7 +56,7 @@
   border-radius: 8px;
   padding: 1rem;
   text-align: left;
-  background-color: #D8D9D7;
+  background-color: #E3E3E3;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
