--- a/Front-MHADFOX/src/pages/components/home/home.component.css
+++ b/Front-MHADFOX/src/pages/components/home/home.component.css
@@ -65,11 +65,12 @@
 }
 
 .service-card img {
-  width: 100%;
-  height: auto;
+  width: 65%;
+  height: 35%;
   object-fit: cover;
   border-radius: 5%;
-  margin-bottom: 1rem;
+  display: block;
+  margin: 0 auto;
 }
 
 .service-card h3 {
