--- a/Front-MHADFOX/src/pages/components/contacto/contacto.component.css
+++ b/Front-MHADFOX/src/pages/components/contacto/contacto.component.css
@@ -1,8 +1,9 @@
+/* Sección Hero */
 .hero {
   padding: 4rem 2rem;
-  background-color: #E3E3E3; /* Fondo uniforme */
+  background-color: #E3E3E3;
   position: relative;
-  overflow: hidden; /* Evita que el pseudo-elemento desplace el contenido */
+  overflow: hidden;
 }
 
 .hero::before {
@@ -12,16 +13,16 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/images/LogoMHADFOX.png'); /* Ruta de la marca de agua */
-  background-size: 50%; /* Tamaño del logo, ajustable */
+  background-image: url('/images/LogoMHADFOX.png');
+  background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
-  opacity: 0.1; /* Marca de agua sutil */
-  z-index: -0.9; /* Asegura que esté completamente detrás del contenido */
+  opacity: 0.1;
+  z-index: -0.9;
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: auto;
   padding: 10px;
   text-align: center;
@@ -42,11 +43,19 @@
   color: #012E40;
   font-weight: bold;
   margin-bottom: 30px;
+  text-align: justify; /* Justificado */
+}
+
+.contact-layout {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 2rem;
 }
 
 .contact-details {
+  flex: 1;
   text-align: left;
-  padding: 5px;
   color: #012E40;
 }
 
@@ -64,24 +73,58 @@
 }
 
 .contact-form {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 0px;
-  width: 340px;
+  gap: 15px;
+  max-width: 400px;
+  margin: auto;
 }
 
 .send-button {
   width: 100%;
   background-color: #f25c05;
   color: white;
-  text-transform: capitalize;
-  font-weight: bold;
   font-size: 16px;
-  padding: 10px;
-  transition: background-color 0.3s ease, transform 0.2s ease;
+  padding: 12px;
+  transition: transform 0.2s ease, background-color 0.3s ease;
 }
 
 .send-button:hover {
-  background-color: #F24405; /* Fondo en hover */
+  background-color: #F24405;
   transform: scale(1.05);
+}
+
+/* Pantallas medianas */
+@media (max-width: 1024px) {
+  .contact-layout {
+    flex-direction: row; /* Elementos en línea para pantallas medianas */
+  }
+}
+
+/* Pantallas pequeñas */
+@media (max-width: 768px) {
+  .contact-layout {
+    flex-direction: column; /* Elementos apilados en columna */
+    gap: 20px;
+  }
+
+  .description {
+    text-align: center;
+  }
+
+  .contact-details {
+    text-align: justify;
+    margin-bottom: 2rem;
+  }
+
+  .contact-form {
+    margin: auto;
+    width: 100%;
+  }
+
+  .send-button {
+    font-size: 14px;
+    padding: 10px;
+  }
 }
