--- a/Front-MHADFOX/src/shared/components/navbar/navbar.component.html
+++ b/Front-MHADFOX/src/shared/components/navbar/navbar.component.html
@@ -20,8 +20,8 @@
 
   <!-- Menú desplegable para pantallas pequeñas -->
   <div class="mobile-menu" *ngIf="isMenuOpen">
-    <button mat-button routerLink="/home" class="button-secundary">Inicio</button>
-    <button mat-button routerLink="/quienes-somos" class="button-secundary">¿Quiénes somos?</button>
-    <button mat-button routerLink="/contacto" class="custom-button">Contáctanos</button>
-  </div>
+    <button mat-button routerLink="/home" class="button-secundary" (click)="isMenuOpen = false">Inicio</button>
+    <button mat-button routerLink="/quienes-somos" class="button-secundary" (click)="isMenuOpen = false">¿Quiénes somos?</button>
+    <button mat-button routerLink="/contacto" class="custom-button" (click)="isMenuOpen = false">Contáctanos</button>
+  </div>  
 </mat-toolbar>
