Se agregan animaciones al menu deplegable del buguer y al boton 'gotosky'

--- a/Front-MHADFOX/src/shared/components/navbar/navbar.component.css
+++ b/Front-MHADFOX/src/shared/components/navbar/navbar.component.css
@@ -61,6 +61,7 @@ mat-toolbar {
   flex-direction: column; /* Botones en columna */
   gap: 1rem;
   box-sizing: border-box; /* Asegura que no se desborde */
+  animation-duration: 0.5s; /* Ajusta la duración de la animación */
 }
 
 /* Estilo para botones dentro del menú desplegable */
