--- a/Front-MHADFOX/src/shared/components/scroll-to-top/scroll-to-top.component.css
+++ b/Front-MHADFOX/src/shared/components/scroll-to-top/scroll-to-top.component.css
@@ -47,4 +47,6 @@
     align-items: center;
     justify-content: center;
   }
-  
+  .scroll-to-top {
+    animation-duration: 0.7s; /* Duración de la animación */
+}
