--- a/Front-MHADFOX/src/pages/components/contacto/contacto.component.html
+++ b/Front-MHADFOX/src/pages/components/contacto/contacto.component.html
@@ -11,13 +11,13 @@
         <h3>Estamos aquí para ayudarte, contáctanos</h3>
         <p>Completa el formulario y nos pondremos en contacto contigo lo antes posible.</p>
 
-        <div class="contact-item">
+        <!--<div class="contact-item">
           <mat-icon class="icon">smartphone</mat-icon>
           <div>
             <strong>Teléfono:</strong><br>
             55-5555-5555
           </div>
-        </div>
+        </div>-->
 
         <div class="contact-item">
           <mat-icon class="icon">email</mat-icon>
@@ -27,13 +27,13 @@
           </div>
         </div>
 
-        <div class="contact-item">
+        <!--<div class="contact-item">
           <mat-icon class="icon">location_on</mat-icon>
           <div>
             <strong>Dirección:</strong><br>
             6743 Last Street, Abcd, Xyz "Nos encantaría conocerte."
           </div>
-        </div>
+        </div>-->
       </div>
 
       <!-- Formulario -->
