Se suben cambios al TS y HMTL del componenente contactanos, ya que no estaba envando el nombre

--- a/Front-MHADFOX/src/pages/components/contacto/contacto.component.html
+++ b/Front-MHADFOX/src/pages/components/contacto/contacto.component.html
@@ -40,7 +40,7 @@
       <form class="contact-form" [formGroup]="datos">
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>Nombre</mat-label>
-          <input matInput placeholder="Escribe tu nombre" />
+          <input matInput formControlName="nombre" placeholder="Escribe tu nombre" />
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="full-width">
